<resources>
    <string name="app_name">Wifi Login</string>
    <string name="title_name">Wifi Login</string>
    <string name="main_subtitle1">by</string>
  <string name="main_subtitle2">Raghav Mahajan</string>


    <string name="te_User">username</string>
    <string name="te_Password">password</string>
    <string name="btn_Login">Log In</string>
    <string name="cB_SaveCred">Remember Password</string>
    <string name="cB_Service">Automatically Login</string>
    <string name="special_msg">Made with Love</string>
    <string name="btn_stopService">Stop Service</string>

    <string name="service_desc">Accessibility Service for Wifi Login</string>

  <string name="Coder" translatable="false">Raghav Mahajan</string>
  <string name="main_subtitle_l2">IIT Indore</string>
  <string name="service_request">For the app to start on boot, you need to disable battery optimisation.\nOn the next screen, find \"Wifi Login\" and click on \"Don\'t Optimise\"</string>

</resources>
