<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/relative"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:theme="@style/OtherTheme">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/titles"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5">

    <TextView
      android:id="@+id/tV_Title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:focusable="true"
      android:focusableInTouchMode="true"
      android:text="@string/title_name"
      android:textColor="@android:color/white"
      android:textSize="58sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
      android:id="@+id/subTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tV_Title"
      android:orientation="horizontal"
      android:paddingTop="2dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tV_Title">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/main_subtitle1"
        android:textSize="14sp"
        android:textStyle="italic" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_subtitle2"
        android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
      android:id="@+id/subTitle2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tV_Title"
      android:orientation="horizontal"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/subTitle">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:text="@string/main_subtitle_l2"
        android:textSize="14sp" />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <FrameLayout
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical"
      tools:ignore="UselessParent">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_IDFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/te_User">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/eT_UserName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusable="true"
          android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_PassFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/te_Password">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/eT_Password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

      <CheckBox
        android:id="@+id/cB_startService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/cB_Service" />

    </LinearLayout>

  </FrameLayout>

  <LinearLayout
    android:id="@+id/btns"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingBottom="32dp">


    <Button
      android:id="@+id/btn_Login"
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:background="@drawable/bg_fround_trans_white"
      android:foreground="@drawable/ripple_login"
      android:paddingTop="6dp"
      android:paddingBottom="6dp"
      android:text="@string/btn_Login"
      tools:ignore="UnusedAttribute" />

    <Button
      android:id="@+id/btn_stopService"
      android:layout_width="match_parent"
      android:layout_height="42dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/bg_fround_shadow_white"
      android:foreground="@drawable/ripple_login"
      android:paddingTop="6dp"
      android:paddingBottom="6dp"
      android:text="@string/btn_stopService"
      android:textColor="@android:color/white"
      android:visibility="gone"
      tools:ignore="UnusedAttribute" />

  </LinearLayout>

</LinearLayout>

